BaseBehavior, BaseClassDescription added

2009-01-18
Reimplementing .NET object support
New ByteCodes GetDotNetType, NewDotNetObject, InvokeDotNet
StyleCop applied
Send message basicNew as bytecode NewObject
Special treatment for new on Behavior, ClassDescription

2010-07-11
Renaming test methods
Fix ifFalse: using block

2010-07-24
Renaming Tokenizer to Lexer
Renaming Compiler to Parser
New AjTalk.Compiler namespace
New AjTalk.Language namespace
New folders in tests
First EvaluateTests

2010-07-30
NativeBehavior with tests
IBehavior.NewObject returns object instead of IObject
nativeSelf in ExecutionBlock
DotNetObject.SendNativeMethod, .SendNativeStaticMethod with tests
DotNetObject.SendMessage (WIP)
bytecode .Send manage native object or IObject

2010-09-12
subclass:nativeType: support in test, DoesNotUnderstand
new example test NativeBahevior.st
IMetaClass
BaseMetaClass
BaseBehaviorTests
new example test NativeFileInfo.st
BaseIndexedObjectTests
BehabiorDoesNotUnderstandMethod
.Superclass as IBehavior

2010-09-18
class methods support in Loader
new and class in DoesNotUnderstandMethod
new example DefineRectangleWithNewAndInitialize.st
DoesNotUnderstandMethod and BehaviorDoesNotUnderstandMethod now in core, and in Machine
AjTalk.Gui with first Transcript
Refactor of ByteCode processing (WIP)

2010-09-19
Add ; (semicolon) support in lexer, parser, with tests
Message
MessageQueue with tests
AgentObject with tests
agent: support in nil, BehaviorDoesNotUnderstand

2010-09-25
minimal Browser in AjTalk.Gui (WIP)
Boot.st in AjTalk.Gui
ClassDescriptor.ToDefineString
IClass.Category
IClassDescription.GetInstanceVariableNames
IClassDescription.GetClassVariableNames
Move BaseClassDescription.classvariablenames to MetaClass

2010-09-26
Fix BaseClass.ToDefineString
Show class define in Browser
Refactoring Loader
Todo.txt

2010-10-10
BaseClass.ToOutputString() with tests

AgentObj

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/